--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
-services: 
-"  - type: web" 
-"    name: resume-screening-ai" 
-"    env: python" 
-"    buildCommand: \"\"" 
-"    startCommand: gunicorn app:app" 
-"    envVars:" 
-"      - key: FLASK_ENV" 
-"        value: production" 
+services:
+  - type: web
+    name: resume-screening-ai
+    env: python
+    buildCommand: ""
+    startCommand: gunicorn app:app
+    envVars:
+      - key: FLASK_ENV
+        value: production
