--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: resume-screening-ai
     env: python
-    buildCommand: ""
+    buildCommand: pip install -r requirements.txt && python -m spacy download en_core_web_sm
     startCommand: gunicorn app:app
     envVars:
       - key: FLASK_ENV
