--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-Flask
-PyMuPDF
-gunicorn
-scikit-learn
-nltk
+Flask==2.3.2
+PyMuPDF==1.22.5
+gunicorn==20.1.0
+scikit-learn==1.3.0
+nltk==3.8.1
+sentence-transformers==2.2.2
+spacy==3.7.2
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
