fix: Render deployment error - huggingface_hub version updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ nltk==3.8.1
 sentence-transformers==2.2.2
 spacy==3.7.2
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+huggingface_hub==0.16.4
