--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,9 @@ PyMuPDF==1.22.5
 gunicorn==20.1.0
 scikit-learn==1.3.0
 nltk==3.8.1
-spacy==3.7.2
-en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl
 twilio==8.0.0
 python-dotenv==1.0.0
-huggingface-hub==0.20.3  # ✅ Compatible
-sentence-transformers==2.2.2  # ✅ Compatible
-torch==2.0.1  # ✅ Compatible
-transformers==4.28.1  # ✅ Compatible
+huggingface-hub==0.20.3
+sentence-transformers==2.2.2
+torch==2.0.1
+transformers==4.28.1
